src/test/scala/wacc/wacc_examples/valid/classes/usePrivateMethod.wacc
# class contains instance of itself

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        private int f(int x) is 
            return x + 1
        end
        public int g(int x) is 
            int y = call f(x); 
            return y + 2
        end
    }
    MyClass x = new MyClass {} ;
    int result = call x.g(5);
    exit result
end
